[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "engine"
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }

[target.'cfg(target_arch="wasm32")'.dependencies]
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = "0.2.83"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
rand = "0.8.5"
serde_json = "1.0.87"
num_cpus = "1.13.1"
pyo3 = { version = "0.17.2", features = ["extension-module"] }
tensorflow = { version = "0.19.1", features = ["tensorflow_gpu"] }
tokio = { version = "1.21.2", features = ["full"] }
#onnxruntime = "0.0.14"
