[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "engine"
crate-type = ["rlib", "cdylib"]

[dependencies]
cfg-if = "1.0.0"
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.87"
slotmap = "1.0.6"
static_assertions = "1.1.0"

[build-dependencies]
cc = "1.0.77"

[target.'cfg(target_arch="wasm32")'.dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
serde-wasm-bindgen = "0.4.5"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
rand = "0.8.5"
num_cpus = "1.13.1"
pyo3 = { version = "0.17.2", features = ["extension-module"] }
#tensorflow = { version = "0.19.1", features = ["tensorflow_gpu"] }
clap = { version = "4.0.18", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }

[profile.release]
lto = true
debug = true
